--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         <!-- App promotion section -->
         <div class="app-section">
             <div class="app-info">
-                <img class="qr-code" src="qr-code.svg" alt="QR Code">
+                <img class="qr-code" src="qr-code.png" alt="QR Code">
             </div>
             <div class="app-text">
                 Start your wealth creation journey by downloading our app
