Converted absolute to relative dimensions

--- a/index.html
+++ b/index.html
@@ -17,19 +17,19 @@
             margin-bottom: 20px;
         }
         .name {
-            font-size: 28px;
+            font-size: 1.5rem;
             font-weight: bold;
             margin: 0;
             color: #000;
         }
         .title {
-            font-size: 18px;
+            font-size: 1rem;
             font-weight: bold;
             margin: 5px 0 15px 0;
             color: #000;
         }
         .phone {
-            font-size: 16px;
+            font-size: 1rem;
             margin: 10px 0;
             color: #000;
         }
@@ -40,7 +40,7 @@
             margin: 20px 0;
         }
         .logo img {
-            height: 70px;
+            height: 3em;
         }
         .social-icons {
             display: flex;
@@ -49,8 +49,8 @@
             margin-left: 10px;
         }
         .social-icons img {
-            width: 40px;
-            height: 40px;
+            width: auto;
+            height: 2em;
         }
         .divider {
             border-top: 1px solid #e0e0e0;
@@ -62,12 +62,12 @@
             align-items: center;
         }
         .qr-code {
-            width: 140px;
+            height: 7em;
         }
         .app-text {
-            font-size: 16px;
+            font-size: 0.5rem;
             font-weight: bold;
-            max-width: 250px;
+            /*max-width: 250px;*/
             color: #000;
         }
         .app-buttons {
@@ -75,19 +75,19 @@
             margin-top: 10px;
         }
         .app-buttons img {
-            height: 40px;
+            height: 3em;
             margin-right: 10px;
         }
         .app-preview {
-            width: 350px;
+            width: 12em;
         }
         .disclaimer {
-            font-size: 11px;
+            font-size: 0.7rem;
             color: #666;
             margin: 15px 0;
         }
         .footer-text {
-            font-size: 11px;
+            font-size: 0.7rem;
             color: #999;
             margin: 20px 0;
         }
@@ -99,7 +99,7 @@
         <div class="header">
             <p class="name">Ziad Mabsout, CFA</p>
             <p class="title">Co-Founder & CEO</p>
-            <p class="phone">M +44 7377 553373</p>
+            <p class="phone"><strong>M</strong> +44 7377 553373</p>
         </div>
 
         <!-- Logo and social icons -->
@@ -108,10 +108,10 @@
                 <img src="vennre.svg" alt="Vennre Logo">
             </div>
             <div class="social-icons">
-                <a href="tel:+447377553373"><img src="phone-icon.svg" alt="Phone"></a>
-                <a href="https://linkedin.com/company/vennre"><img src="linkedin-icon.svg" alt="LinkedIn"></a>
-                <a href="https://instagram.com/vennre"><img src="instagram-icon.svg" alt="Instagram"></a>
-                <a href="https://youtube.com/vennre"><img src="youtube-icon.svg" alt="YouTube"></a>
+                <a href="tel:+44123456789"><img src="phone-icon.svg" alt="Phone"></a>
+                <a href="https://www.linkedin.com/company/vennre/posts/?feedView=all"><img src="linkedin-icon.svg" alt="LinkedIn"></a>
+                <a href="https://www.instagram.com/vennrewealth/?api=postMessage"><img src="instagram-icon.svg" alt="Instagram"></a>
+                <a href="https://www.youtube.com/@Vennre"><img src="youtube-icon.svg" alt="YouTube"></a>
             </div>
         </div>
 
@@ -125,8 +125,8 @@
             <div class="app-text">
                 Start your wealth creation journey by downloading our app
                 <div class="app-buttons">
-                    <a href="https://apps.apple.com/app/vennre"><img src="ios.png" alt="Download on the App Store"></a>
-                    <a href="https://play.google.com/store/apps/details?id=com.vennre.app"><img src="android.png" alt="Get it on Google Play"></a>
+                    <a href="https://apps.apple.com/ae/app/vennre/id6501961138"><img src="ios.png" alt="Download on the App Store"></a>
+                    <a href="https://play.google.com/store/apps/details?id=com.vennre.app.production&=pcampaignid=web_share"><img src="android.png" alt="Get it on Google Play"></a>
                 </div>
             </div>
             <div>
@@ -136,6 +136,8 @@
 
         <!-- Disclaimer -->
         <p class="disclaimer">Screens are illustrative and not actual performance. Not financial advice or a promotion. For eligible investors only, subject to qualification.</p>
+
+        <div class="divider"></div>
 
         <!-- Footer text -->
         <p class="footer-text">This email and its attachments are confidential and intended for the named recipient only. If you received it in error, please notify the sender and delete it immediately. The views expressed are those of the author and may not represent Vennre. Unauthorized use, copying, or disclosure is prohibited. Email communication may not be secure; please avoid sharing sensitive information.</p>
