Linked the logo to the website

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         <!-- Logo and social icons -->
         <div class="logo-row">
             <div class="logo">
-                <img src="vennre.svg" alt="Vennre Logo">
+                <a href="http://vennre.com/"><img src="vennre.svg" alt="Vennre Logo"></a>
             </div>
             <div class="social-icons">
                 <a href="tel:+44123456789"><img src="phone-icon.svg" alt="Phone"></a>
