Implemented padding and a font change

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         }
         .signature-container {
             max-width: 600px;
-            padding: 0;
+            padding: 10px 25px;
         }
         .header {
             margin-bottom: 20px;
@@ -82,7 +82,7 @@
             width: 12em;
         }
         .disclaimer {
-            font-size: 0.7rem;
+            font-size: 0.5rem;
             color: #666;
             margin: 15px 0;
         }
