--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
         }
         .signature-container {
             max-width: 600px;
-            padding: 10px 25px;
+            padding: 0px;
+            /* padding: 10px 25px; */
         }
         .header {
             margin-bottom: 20px;
