Changed width to 600px

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             color: #333;
         }
         .signature-container {
-            max-width: 600px;
+            width: 600px;
             padding: 0px;
             /* padding: 10px 25px; */
         }
